✅ eslint and prettier tested

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,10 @@
         "@typescript-eslint",
         "react"
     ],
+    "settings": {
+        "react": {
+            "version": "^18.2.0"  // Auto-detect React version
+        }
+    },
     "rules": {}
 }
