🎨 style basic experience box completed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-toastify-clone",
+  "name": "react-experience-box",
   "version": "1.0.0",
   "description": "This is react-toastify clone project",
   "main": "index.js",
